<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic__local_movies_24"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_live_tv_24"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite" />

</menu>
